<resources>
    <string name="app_name">即付</string>
    <string name="mobile_login">短信快捷登录</string>
    <string name="username">手机/邮箱/用户名</string>
    <string name="password">密码</string>
    <string name="default_item">下次自动登录</string>
    <string name="login">登录</string>
    <string name="aggrement">我已阅读并接受</string>
    <string name="terms">《即付用户协议》.</string>
    <string name="configure">还未注册？</string>
    <string name="zhuce">注册</string>
    <string name="step1">1:输入手机号  >   </string>
    <string name="step2">2:输入验证码  >   </string>
    <string name="step3">3:设置密码    >   </string>
    <string name="confirmcode">点击进入注册</string>

</resources>
