<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_weight="0.02"
    android:background="@color/colorback2">
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/zhuce"
        android:layout_marginLeft="20dp"
    android:textSize="25dp"
    android:id="@+id/textView5"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_weight="0.03">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step1"
            android:textSize="18dp"
            android:textColor="@color/colorregister"
            android:id="@+id/textView6"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step2"
            android:textSize="18dp"
            android:id="@+id/textView7"
            android:layout_alignTop="@+id/textView6"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/step3"
            android:textSize="18dp"
            android:id="@+id/textView8"
            android:layout_marginLeft="20dp"
            android:layout_alignTop="@+id/textView7"
            android:layout_toEndOf="@+id/textView7" />


    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/colorback2"></RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorback1">

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/confirmcode"
            android:textColor="@color/colorwhite"
            android:id="@+id/button2"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="41dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/button2">

            <CheckBox
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aggrement"
                android:id="@+id/checkBox3"


                android:layout_marginStart="36dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms"
                android:id="@+id/textView9"
                android:layout_marginTop="18dp"
                android:textColor="@color/colorregister"
                android:layout_toEndOf="@+id/checkBox3" />
        </RelativeLayout>


    </RelativeLayout>

</LinearLayout>